--- a/src/app/shared/components/info-block1/info-block1.component.css
+++ b/src/app/shared/components/info-block1/info-block1.component.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   gap: 2rem;
   padding: 2rem;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   flex-wrap: wrap;
   margin: 0 auto;
   max-width: 1200px;
