--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -8,7 +8,7 @@
   border-radius: 0 0 14px 14px;
   padding: 0.375rem 1.5rem;
   position: static;
-  z-index: 1100;
+  z-index: 1000;
   transition: transform 0.4s ease-in-out, box-shadow 0.2s, position 0.4s ease-in-out;
   border: 1.9px solid #5937E0;
   border-top: none;
@@ -201,4 +201,9 @@ body {
   body {
     padding-top: 0;
   }
+}
+
+.modal-login-bg,
+.fondo-modal {
+  z-index: 1050;
 }
