--- a/src/app/shared/components/dato-home/dato-home.component.html
+++ b/src/app/shared/components/dato-home/dato-home.component.html
@@ -10,8 +10,8 @@
 
       <!-- Texto de pasos -->
       <div class="col-md-6">
-        <!-- Título añadido -->
-        <h2 class="main-title mb-4">Paso a paso</h2>
+        <!-- Título sin animación -->
+        <h2 class="static-title mb-4">Paso a paso</h2>
         
         <ul class="list-unstyled">
           <li class="mb-4 step-item" data-step="1">
