--- a/src/app/shared/components/dato-home/dato-home.component.html
+++ b/src/app/shared/components/dato-home/dato-home.component.html
@@ -1,18 +1,14 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <div class="container py-5">
     <div class="row align-items-center">
-
-      <!-- Imagen -->
       <div class="col-md-6 mb-4 mb-md-0">
         <img src="assets/img/banner.webp" alt="Concesionario Karhub" class="img-fluid rounded">
         
       </div>
 
-      <!-- Texto de pasos -->
       <div class="col-md-6">
         <ul class="list-unstyled">
           <li class="mb-4">
-            <h5><span class="step-number">1</span> Selcción de vehículo</h5><!--cambio seleccion corregir-->
+            <h5><span class="step-number">1</span> Selección de vehículo</h5>
             <p>Elige el modelo y las características que mejor se adapten a tu viaje: tamaño, extras y tipo.</p>
           </li>
           <li class="mb-4">
