Fixed pass comparison on login and register

--- a/src/app/shared/components/registro/registro.component.html
+++ b/src/app/shared/components/registro/registro.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="input-row">
         <input type="password" placeholder="Contraseña" class="login-input" autocomplete="new-password" formControlName="contrasena" />
-        <input type="password" placeholder="Confirmacion contraseña" class="login-input" autocomplete="new-password" />
+        <input type="password" placeholder="Confirmacion contraseña" class="login-input" autocomplete="new-password" formControlName="confirmarContrasena"/>
       </div>
       <div class="input-row">
         <input type="text" placeholder="Dni" class="login-input" autocomplete="off" formControlName="dni" />
