--- a/src/app/shared/components/home-banner-first/home-banner-first.component.html
+++ b/src/app/shared/components/home-banner-first/home-banner-first.component.html
@@ -2,7 +2,7 @@
   <div class="contenedor-banner">
     <div class="container-titulo-descripcion">
       <h1 class="titulo">Concesionario KARHUB</h1>
-      <p class="parrafo">Compra o alquiler, tú eliges. Nosotros te ayudamos a encontrar  el coche ideal </p>
+      <p class="parrafo">Auto, motocicleta o furgoneta, tú eliges. Nosotros te ayudamos a encontrar  el vehículo ideal.</p>
     </div>
 
      <form class="folmulario-banner"[formGroup]="formTipoUbicacion" (ngSubmit)="submit()">
