--- a/src/app/shared/components/dato-contacto/dato-contacto.component.html
+++ b/src/app/shared/components/dato-contacto/dato-contacto.component.html
@@ -1,32 +1,31 @@
 <div class="contacto-container container">
     <div class="row text-center text-md-start py-4">
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        
-        <img src="assets/img/ubicacion.png" alt="Ubicación" class="icon me-2">
+        <i class="bi bi-geo-alt icono-direccion"></i>
         <div>
           <div class="label">Dirección</div>
-          <div class="info"><b>Oxford Ave. Cary, NC 27511</b></div>
+          <div class="info"><b>C/ Albarracín 25 28037, Madrid, España</b></div>
         </div>
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="assets/img/Email.png" alt="Correo" class="icon me-2">
+        <i class="bi bi-envelope"></i>
         <div>
           <div class="label">Email</div>
-          <div class="info"><b>nwiger&#64;yahoo.com</b></div>
+          <div class="info"><b>karhub&#64;gmail.com</b></div>
         </div>
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="assets/img/telefono.png" alt="Teléfono" class="icon me-2">
+        <i class="bi bi-telephone"></i>
         <div>
           <div class="label">Teléfono</div>
-          <div class="info"><b>+537 547-6401</b></div>
+          <div class="info"><b>+34 923456789</b></div>
         </div>
       </div>
 
       <div class="col-12 col-md-3 d-flex align-items-center mb-3 mb-md-0">
-        <img src="assets/img/Horario.png" alt="Horario" class="icon me-2">
+       <i class="bi bi-clock"></i>
         <div>
           <div class="label">Horario</div>
           <div class="info"><b>Sab-Lun: 10am - 10pm</b></div>
