--- a/src/app/shared/components/titulo/titulo.component.css
+++ b/src/app/shared/components/titulo/titulo.component.css
@@ -1,23 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');
- 
- body {
-      font-family: 'Work Sans', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f8f8;
-    }
-    .contact-container {
-      text-align: center;
-      padding: 60px 20px;
-      background-color: #ffffff;
-    }
-    .contact-container h1 {
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .subtitulo {
-      font-size: 16px;
-      color: #888888;
-      text-align: center;
-    }
+.titulo-seccion {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.titulo-seccion h1 {
+  font-size: 3rem;
+}
+a {
+  text-decoration: none;
+  color: rgb(162, 162, 162);
+}
