--- a/src/app/shared/components/titulo/titulo.component.html
+++ b/src/app/shared/components/titulo/titulo.component.html
@@ -1,5 +1,6 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<div class="contact-container">
-    <h1>Contactos</h1>
-    <div class="subtitulo">Inicio / Contáctanos</div>
+<div class="container my-5 py-5 titulo-seccion">
+    <h1><b>Contactos</b><br/></h1>
+    <a href="index.html"><b>Inicio</b></a>
+    <span>/</span>
+    <span class="actual">Contáctanos</span>
 </div>
