--- a/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
+++ b/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
@@ -1,14 +1,14 @@
-<div class="modal-fullscreen-sm-down" *ngIf="mostrarModulo" aria-modal="true">
+<div class="modal-fullscreen-sm-down" aria-modal="true">
   <div class="modal-dialog modal-fullscreen-sm-down" >
     <div class="modal-content">
 
       <div class="modal-header">
-        <button type="button" class="btn-close" (click)="cerrarModal()"></button>
+        <button type="button" class="btn-close" (click)="close()"></button>
       </div>
 
       <div class="modal-body">
         <div class="d-flex flex-wrap main-layout">
-         
+
           <div class="left-column flex-grow-1 me-4" style="min-width: 180px; max-width: 300px;">
             <div class="brand-price mb-4">
               <div class="mb-3">
@@ -25,7 +25,7 @@
               </div>
             </div>
 
-            <img src="Silueta.png" alt="Auto" class="main-image img-fluid mb-3" />
+            <img src="/assets/img/coche_azul.jpg" alt="Auto" class="main-image img-fluid mb-3" />
 
             <div class="vehicle-thumbnails d-flex gap-2">
               <img src="Imgs.png" alt="Thumbnail" class="thumb img-thumbnail" style="width: 60px; height: 60px; cursor: pointer;" />
@@ -35,7 +35,7 @@
 
           <div class="right-column flex-grow-1" style="min-width: 300px; max-width: 600px;">
             <div class="vehicle-info row g-3">
-              
+
               <div class="col-12">
                 <img src="/assets/img/icono-vehiculo/cajaDeCambios.png" alt="transmision" style="width:24px;" />
                 <label for="transmision" class="form-label mb-0 flex-grow-1">Transmisión</label>
@@ -120,7 +120,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="cerrarModal()">Cancelar</button>
+        <button type="button" class="btn btn-secondary" (click)="close()">Cancelar</button>
         <button type="button" class="btn btn-success">Guardar</button>
       </div>
 
