redireccion de los botones
editar perfil y agregar un vehiculo.

--- a/src/app/shared/components/editar-perfil/editar-perfil.component.html
+++ b/src/app/shared/components/editar-perfil/editar-perfil.component.html
@@ -10,6 +10,6 @@
         <input type="password" name="nueva_contrasena" placeholder="Nueva contraseña" class="entrada-perfil" autocomplete="new-password">
         <button type="submit" class="btn-listo">Listo</button>
       </form>
-      <button type="button" class="btn-cerrar">&times;</button>
+      <button type="button" class="btn-cerrar" (click)="close()">&times;</button>
     </div>
   </div>
