--- a/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
+++ b/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
@@ -1,9 +1,9 @@
-<div class="modal-fullscreen-sm-down" *ngIf="mostrarModulo" aria-modal="true">
-  <div class="modal-dialog modal-fullscreen-sm-down" >
+<div class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0, 0, 0, 0.5);" aria-modal="true" role="dialog">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
 
       <div class="modal-header">
-        <button type="button" class="btn-close" (click)="cerrarModal()"></button>
+        <button type="button" class="btn-close" (click)="close()"></button>
       </div>
 
       <div class="modal-body">
@@ -120,7 +120,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="cerrarModal()">Cancelar</button>
+        <button type="button" class="btn btn-secondary" (click)="close()">Cancelar</button>
         <button type="button" class="btn btn-success">Guardar</button>
       </div>
 
