--- a/src/app/shared/components/perfil-administracion/perfil-administracion.component.html
+++ b/src/app/shared/components/perfil-administracion/perfil-administracion.component.html
@@ -1,17 +1,10 @@
 <div class="admin-header">
   <h1 class="admin-title">Administración de vehículos</h1>
   <button class="admin-add-btn" (click)="abrirAgregarVehiculo()">
-    <i class="bi bi-x-circle-fill " style="font-size: 2rem;"></i>
+    <i class="bi bi-plus-circle-fill" style="font-size: 2rem;"></i>
     Agregar Vehículo
   </button>
 </div>
-<!--Agregar modal vehiculo-->
-<div class="modal-backdrop" *ngIf="mostrarFormulario">
-  <div class="modal-contenido" >
-    <app-editar-vehiculo (cerrar)="cerrarAgregarVehiculo()"></app-editar-vehiculo>
-  </div>
-</div>
-
 
 <div class="vehiculos-grid">
   <div class="vehiculo-card" *ngFor="let veh of vehiculos">
@@ -34,3 +27,7 @@
     <button class="vehiculo-btn" >Editar</button>
   </div>
 </div>
+
+
+<app-editar-vehiculo *ngIf="showAgregarModal" (closeModal)="cerrarAgregarVehiculo()"></app-editar-vehiculo>
+
