--- a/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.css
+++ b/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.css
@@ -25,7 +25,7 @@
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 32px rgba(0,0,0,0.15);
-  background: rgba(40, 40, 50, 0.35);
+  /* background: rgba(40, 40, 50, 0.35); */
   backdrop-filter: blur(8px);
 }
 
